# gigasheet-python

./: LICENSE  README.md  gigasheet.py  pyproject.toml  setup.py
examples/: append_from_local.py  check_setup.py  download_export.py  import_and_share_cli.py  upload_and_share_cli.py  upload_from_s3.py
gigasheet/: gigasheet.py  test_gigasheet.py
gigasheet/testdata/: sample-local-upload.csv
